<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_screen_on_list"
        android:title="@string/menu_screen_on_list"
        android:icon="@drawable/ic_menu_screen_on_list"/>

    <item
        android:id="@+id/menu_screen_on_today"
        android:title="@string/menu_screen_on_today"
        android:icon="@drawable/ic_menu_screen_on_today"/>
  
    <item
        android:id="@+id/menu_screen_on_weekdays"
        android:title="@string/menu_screen_on_weekdays"
        android:icon="@drawable/ic_menu_screen_on_weekdays"/>
  
    <item
        android:id="@+id/menu_screen_on_weekends"
        android:title="@string/menu_screen_on_weekends"
        android:icon="@drawable/ic_menu_screen_on_weekends"/>
  
</menu>
