<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_below="@id/boot_base_layout"
	android:stretchColumns="1"
	android:shrinkColumns="1"
	android:clipChildren="true"
	android:clipToPadding="true"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
	
    <View
		android:id="@+id/boot_expand_separator"
        android:background="@color/boot_expand_separator_color"
	    android:layout_width="fill_parent" 
	    android:layout_height="@dimen/boot_expand_separator_size"/>
    
    <TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	    <TextView
	     	android:id="@+id/boot_label_uptime"
	    	android:text="@string/label_boot_uptime"
	    	style="@style/DefaultLabel"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"/>
	    <TextView
	    	android:id="@+id/boot_uptime"
	    	style="@style/DefaultListItemText"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"/>
     </TableRow>

    <TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	    <TextView
	    	android:id="@+id/boot_label_lifetime"
	    	android:text="@string/label_boot_lifetime"
	    	style="@style/DefaultLabel"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"/>
	    <TextView
	    	android:id="@+id/boot_lifetime"
	    	style="@style/DefaultListItemText"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"/>
    </TableRow>
    
    <TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	    <TextView
	    	android:id="@+id/boot_label_shutdown"
	    	android:text="@string/label_boot_shutdown"
	    	style="@style/DefaultLabel"
		    android:layout_width="@dimen/boot_label_width" 
		    android:layout_height="fill_parent"/>
	    <TextView
	    	android:id="@+id/boot_shutdown"
	    	style="@style/DefaultListItemText"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"/>
    </TableRow>

</TableLayout>